# ats-backend

./: create_tables.py  database.py  main.py  pyproject.toml  requirements.txt
models/: __init__.py  enums.py  news_posts.py  user.py
routers/: user.py  user_email.py  user_oauth.py
schemas/: user.py
services/: cloudinary.py  email.py
utils/: auth.py
